# llm-sql-phc

./: .gitignore  README.md  ggr.py  main.py  pyproject.toml
docs/: llm-sql-01-reference.md  llm-sql-02-algo-improvements.md  llm-sql-phc.md
docs/arXiv-mlsys/: Makefile  arXiv-mlsys-README.md
docs/arXiv-mlsys/tex-source/: mlsys2025.sty  paper_template.tex  reference.bib
docs/arXiv-mlsys/tex-source/figures/MLSys_Figures/: CLAUDE.md
docs/arXiv-mlsys/tex-source/figures/claude-figures/: CLAUDE.md  tex-figures-CLAUDE.md
docs/arXiv-mlsys/tex-source/minted-cache/: listing1.pygtex  listing2.pygtex  listing3.pygtex  listing4.pygtex  listing5.pygtex  listing6.pygtex  listing7.pygtex
docs/arXiv-mlsys/tex-source/sections/: 1_0_introduction.tex  1_1_ggr_alg_greedy.tex  1_introduction.tex  2_0_adjustments.tex  2_1_ggr_alg_greedy_adj.tex
docs/notes/: arxiv-submission.md  arxiv.md
docs/notes/graph/: graph-CLAUDE.md
docs/notes/graph-mwm/script/: bench_plot.py
docs/notes/graph/script/: bench_plot.json  bench_samples.py  bench_scaling_all.py  bench_scaling_rx_mw.py  bench_scaling_rx_mw_large.py  common.py  pyproject.toml
docs/notes/graph/src/: benchmark_matching.py
docs/report/: llm-sql-01-references.md  llm-sql-02-algo-improvements.md
src/: ggr.py  main.py
