[project]
name = "llm-sql-phc"
version = "0.1.0"
description = "GGR algorithm for optimizing LLM queries"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
]

[tool.uv.workspace]
# if changed, run:
# rm uv.lock && uv sync --all-packages
members = ["docs/notes/graph-mwm/script"]
